<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.alejandra.ejtutoria3cocheslocos.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="lanzarJugar"
        android:text="@string/jugar" />

    <Button
        android:id="@+id/btConfigurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarConfigurar"
        android:text="@string/configurar" />

    <Button
        android:id="@+id/btAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btConfigurar"
        android:layout_alignRight="@+id/btConfigurar"
        android:layout_below="@+id/btConfigurar"
        android:onClick="lanzarAcercaDe"
        android:text="@string/acercaDe" />
</LinearLayout>
