<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configurar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.alejandra.ejtutoria3cocheslocos.ConfigurarActivity"
    android:gravity="fill_vertical">

    <TextView
        android:text="@string/labelNumeroCoches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvLabelNumeroCoches"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvLabelNumeroCoches"
        android:layout_toEndOf="@+id/tvLabelNumeroCoches"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_alignBaseline="@+id/tvLabelNumeroCoches"
        android:id="@+id/etNumeroCoches"
        android:hint="cuántos coches quieres"
        android:text="1" />

    <TextView
        android:text="@string/labelMaxTamanioCoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLabelNumeroCoches"
        android:layout_alignLeft="@+id/tvLabelNumeroCoches"
        android:layout_alignStart="@+id/tvLabelNumeroCoches"
        android:layout_alignRight="@+id/tvLabelNumeroCoches"
        android:layout_alignEnd="@+id/tvLabelNumeroCoches"
        android:id="@+id/tvLabelMaxTamanioCoche"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:ems="10"
       android:layout_toRightOf="@+id/tvLabelMaxTamanioCoche"
        android:layout_toEndOf="@+id/tvLabelMaxTamanioCoche"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_alignBaseline="@+id/tvLabelMaxTamanioCoche"
        android:id="@+id/etMaxTamanioCoche"
        android:hint="qué tamaño quieres"

        android:text="64" />

    <CheckBox
        android:text="@string/direccionAleatoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLabelMaxTamanioCoche"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/cbDireccionAleatoria"
        android:checked="true" />

    <CheckBox
        android:text="@string/anguloAleatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cbDireccionAleatoria"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/cbAnguloAleatorio"
        android:checked="true" />

    <Button
        android:text="@string/guardarConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbDireccionAleatoria"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:id="@+id/btGuardarConfiguracion"
        style="@style/Widget.AppCompat.Button" />
</RelativeLayout>
